--- a/src/components/SingleVIdeo/Desc/desc.css
+++ b/src/components/SingleVIdeo/Desc/desc.css
@@ -26,6 +26,7 @@
     font-size: 32px;
     font-family: Raleway;
     font-weight: 600;
+    margin: 12px 0;
   }
   .desc-container-content-points {
     margin: 24px 0;
