--- a/src/components/VideoPlayer/AboutThisCourse/aboutthiscourse.css
+++ b/src/components/VideoPlayer/AboutThisCourse/aboutthiscourse.css
@@ -41,7 +41,7 @@
   }
   .aboutThisCourse-container-content-points-point {
     /* width: 324px; */
-    height: 55px;
+    height: auto;
     color: rgba(0, 0, 0, 0.6);
     font-size: 16px;
     font-family: Raleway;
