--- a/src/components/Level 2/WhatYouGet/whatyouget.css
+++ b/src/components/Level 2/WhatYouGet/whatyouget.css
@@ -38,7 +38,7 @@
 }
 .what-container-content-points-point {
   width: 324px;
-  height: 55px;
+  height: auto;
   color: rgba(0, 0, 0, 0.6);
   font-size: 16px;
   font-family: Raleway;
