--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -2,7 +2,7 @@
   width: 1440px;
   height: 100px;
 
-  padding: 0 5%;
+
   background: #ffffff;
   box-shadow: 0px 0px 6px rgba(1, 172, 241, 0.04),
     0px 2px 4px rgba(1, 172, 241, 0.08);
@@ -19,8 +19,9 @@
   justify-content: space-between;
   align-items: center;
   /* gap: 170px; */
-  width: 1440px;
-  /* width: 100%; */
+  /* width: 1440px; */
+  width: 100%;
+  margin: 0 5%;
 }
 .navbar-logo img {
   width: 100px;
@@ -31,7 +32,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 50px;
+  gap: 18px;
 }
 
 .navbar-navlinks {
@@ -184,4 +185,14 @@
   font-weight: 400;
   line-height: normal;
   cursor: pointer;
+}
+.LoginProfileIcon{
+  font-size: 43px;
+  color: black;
+}
+
+@media screen and (max-width:800px){
+  .navbar-container{
+    height: 69px;
+  }
 }
