--- a/src/components/Signup/signup.css
+++ b/src/components/Signup/signup.css
@@ -1,119 +1,140 @@
-.signup-container{
-    height: 655px;
-    display: grid;
-    place-items: center;
+.signup-container {
+  height: 655px;
+  display: grid;
+  place-items: center;
 }
 
-.signup-container-content{
-    display: flex;
-    width: 444px;
-    height: 633px;
-    flex-direction: column;
-    /* justify-content: flex-end; */
-    align-items: center;
-    justify-content: center;
-    
-    /* flex-shrink: 0; */
-    /* border: 1px solid black; */
+.signup-container-content {
+  display: flex;
+  width: 444px;
+  height: 633px;
+  flex-direction: column;
+  /* justify-content: flex-end; */
+  align-items: center;
+  justify-content: center;
+
+  /* flex-shrink: 0; */
+  /* border: 1px solid black; */
 }
 
-.signup-container-content-header{
-    display: flex;
-    /* width: 428px; */
-    padding: 8px 0px;
-    justify-content: center;
-    align-items: center;
-    gap: 4px;
-
+.signup-container-content-header {
+  display: flex;
+  /* width: 428px; */
+  padding: 8px 0px;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
 }
-.signup-container-content-header-title{
-    color: #000;
-    text-align: center;
-    font-size: 24px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-}
-
-
-.signup-container-content-form form{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    
-    gap: 20px;
+.signup-container-content-header-title {
+  color: #000;
+  text-align: center;
+  font-size: 24px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
 
-.signup-container-content-form-submitBtn{
-    display: flex;
-    width: 396px;
-    height: 50px;
-    padding: 16px 24px;
-    border-radius: 8px;
-    background:  #F66E24;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    flex-shrink: 0;
-    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.06), 0px 0px 4px 0px rgba(0, 0, 0, 0.04);
-    border: none;
+.signup-container-content-form form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-    color: #E5E5E5;
-    font-size: 16px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 22px;
-
-    cursor: pointer;
+  gap: 20px;
 }
 
-.signup-container-content-terms{
+.signup-container-content-form-submitBtn {
+  display: flex;
+  width: 396px;
+  height: 50px;
+  padding: 16px 24px;
+  border-radius: 8px;
+  background: #f66e24;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.06),
+    0px 0px 4px 0px rgba(0, 0, 0, 0.04);
+  border: none;
 
-    display: flex;
-    width: 428px;
-    padding: 8px 16px;
-    justify-content: center;
-    align-items: center;
+  color: #e5e5e5;
+  font-size: 16px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 22px;
 
-    color:  #818A99;
-    text-align: center;
-    font-size: 12px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
-.signup-container-content-login{
-    color: #1C2129;
-    text-align: center;
-    font-size: 14px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 22px;
-
-    display: flex;
-    width: 428px;
-    padding: 8px 16px;
-    justify-content: center;
-    align-items: center;
-}
-.signup-container-content-login span:nth-child(1){
-    color: #F66E24;
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.signuperror{
-    color: red;
-    text-align: left;
-    font-size: 12px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    align-self: flex-start;
-    margin-left: 35px;
-    line-height: 7px;
+.signup-container-content-terms {
+  display: flex;
+  width: 428px;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  color: #818a99;
+  text-align: center;
+  font-size: 12px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.signup-container-content-login {
+  color: #1c2129;
+  text-align: center;
+  font-size: 14px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 22px;
+
+  display: flex;
+  width: 428px;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+}
+.signup-container-content-login span:nth-child(1) {
+  color: #f66e24;
+  cursor: pointer;
+}
+
+.signuperror {
+  color: red;
+  text-align: left;
+  font-size: 12px;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 600;
+  align-self: flex-start;
+  margin-left: 35px;
+  line-height: 7px;
+}
+
+@media screen and (max-width: 500px) {
+  .signup-container {
+    width: 100%;
+  }
+  .signup-container-content {
+    width: 90%;
+  }
+  .signup-container-content-form {
+    width: 100%;
+  }
+
+  .inputFeild,
+  .signup-container-content-form-submitBtn {
+    width: 90% !important;
+  }
+
+  .signup-container-content-terms,
+  .signup-container-content-login {
+    width: 100%;
+    padding: 8px 0;
+  }
 }
