--- a/src/components/SingleVIdeo/Requirement/requirement.css
+++ b/src/components/SingleVIdeo/Requirement/requirement.css
@@ -25,6 +25,7 @@
     font-size: 32px;
     font-family: Raleway;
     font-weight: 600;
+    margin: 12px 0;
   }
   .requirement-container-content-points {
     margin: 24px 0;
@@ -40,7 +41,7 @@
   }
   .requirement-container-content-points-point {
     width: 324px;
-    height: 55px;
+    height: auto;
     color: rgba(0, 0, 0, 0.6);
     font-size: 16px;
     font-family: Raleway;
