--- a/src/components/SingleVIdeo/Who/who.css
+++ b/src/components/SingleVIdeo/Who/who.css
@@ -25,9 +25,10 @@
     font-size: 32px;
     font-family: Raleway;
     font-weight: 600;
+    margin: 12px 0;
   }
   .who-container-content-points {
-    margin: 24px 0 0 0 ;
+    margin: 24px 0 ;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -40,7 +41,7 @@
   }
   .who-container-content-points-point {
     /* width: 324px; */
-    height: 55px;
+    height: auto;
     color: rgba(0, 0, 0, 0.6);
     font-size: 16px;
     font-family: Raleway;
