added env files and added remaining parts

--- a/src/App.css
+++ b/src/App.css
@@ -97,7 +97,7 @@ a{
 .singleVideo-Container{
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   /* align-items: center; */
   width:1440px;
   position: relative;
