--- a/src/responsive.css
+++ b/src/responsive.css
@@ -167,18 +167,54 @@
   }
 }
 @media screen and (max-width: 780px) {
+
+
+  /* width */
+::-webkit-scrollbar {
+  width: 2px;
+    height: 1px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+
   .navbar-navlinks {
-    display: none;
+    /* display: none; */
+    left: -750px;
+    position: absolute;
+    /* top: -41px; */
+    padding: 25px 0;
+    left: 0;
+    height: 100vh;
+    transition: all 0.5s ease-in-out;
+    background-color: white;
+    width: 100vw;
+    overflow: hidden;
+    left: -100vw;
+    top: 100px;
   }
   .navbar-navlinks.display {
     display: block;
-    width: 100vw;
-    background-color: white;
-    position: absolute;
-    top: 100px;
-    padding: 25px 0;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    /* position: fixed; */
+    
+  
+    transition: all 0.5s ease-in-out;
     left: 0;
-    height: auto;
   }
 
   .navbar-navlinks ul {
@@ -242,7 +278,7 @@
   }
   .midBanner-container-left {
     width: 100% !important;
-    height: 445px !important;
+    height: 285px !important
   }
   .midBanner-container-left-title {
     width: 100% !important;
@@ -336,11 +372,9 @@
     bottom: 0 !important;
   }
 
-  .button-section{
-gap: 27px;
+  .button-section {
+    gap: 27px;
   }
-
-
 }
 
 @media only screen and (max-width: 400px) {
@@ -376,10 +410,10 @@ gap: 27px;
   .priceBox-btn {
     width: 108px !important;
   }
-  .button-section{
+  .button-section {
     gap: 20px;
-      }
-    
+  }
+
   .priceBox-feature-answer {
     width: 234px;
   }
