--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -50,7 +50,7 @@
     display: flex;
     width: 396px;
     height: 50px;
-    padding: 16px 24px;
+    /* padding: 16px 24px; */
     border-radius: 8px;
     background:  #F66E24;
     justify-content: center;
@@ -68,6 +68,17 @@
     line-height: 22px;
 
     cursor: pointer;
+}
+.login-container-content-form-submitBtn input{
+    background: none;
+    border: none;
+    
+    color: #E5E5E5;
+    font-size: 16px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 22px;
 }
 
 .login-container-content-forgot{
