--- a/src/components/Signup/signup.css
+++ b/src/components/Signup/signup.css
@@ -48,7 +48,7 @@
   display: flex;
   width: 396px;
   height: 50px;
-  padding: 16px 24px;
+  /* padding: 16px 24px; */
   border-radius: 8px;
   background: #f66e24;
   justify-content: center;
